# omnipanel

./: .gitignore  .gitmodules  .stcignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PRD.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
.hermes/plans/: 2025-06-06-docker-module-polish.md  2025-06-06-knowledge-module.md
agent/: .env.example  .gitignore  Dockerfile  README.md  agent-runtime.ts  cli.ts  config.ts  docker-compose.yml  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
agent/adapters/acp/: index.ts  protocol.ts  server.ts
agent/adapters/web/: bootstrap.ts  index.ts  server.ts
agent/config/: default.json
agent/core/: config.ts  index.ts  omniBackend.ts  runtime.ts  sessions.ts  streamChunks.ts  systemPrompt.ts  turn.ts  types.ts
agent/core/agents/: index.ts  omniMcp.ts  types.ts
agent/dev-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
agent/dev-ui/src/: App.tsx  DebugReasoning.tsx  DebugRuntimeProvider.tsx  DebugThread.tsx  MarkdownText.tsx  api.ts  messageBridge.ts  styles.css
agent/scripts/: launch-web.ts  setup.ps1  setup.sh  test-client.js
agent/skills/omnipanel/: SKILL.md
agent/src/: index.ts
agent/src/core/: agent.ts  config.ts
agent/src/services/: acp-server.ts  logger.ts
agent/src/types/: index.ts
agent/tests/: agent.test.ts
crates/omnipanel-ai/: Cargo.toml
crates/omnipanel-ai/src/: ir.rs  lib.rs  provider.rs  types.rs
crates/omnipanel-ai/src/orchestrator/: internal.rs  mod.rs  tools.rs  types.rs
crates/omnipanel-ai/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/omnipanel-ai/src/providers/acp/: client.rs  client_tools.rs  mod.rs  native_tools.rs  translate.rs  types.rs
crates/omnipanel-ai/src/routing/: backend_id.rs  mod.rs
crates/omnipanel-core/: Cargo.toml
crates/omnipanel-core/resources/shell-integration/: bash.sh  fish.fish  powershell.ps1
crates/omnipanel-core/src/: lib.rs
crates/omnipanel-core/src/storage/: mod.rs
crates/omnipanel-core/src/terminal/: config.rs  event.rs  mod.rs
crates/omnipanel-db/: Cargo.toml
crates/omnipanel-db/src/: lib.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs
crates/omnipanel-docker/: Cargo.toml
crates/omnipanel-docker/src/: compose.rs  lib.rs  local.rs  local_engine.rs  model.rs  onepanel.rs  ssh.rs
crates/omnipanel-error/src/: lib.rs
crates/omnipanel-exec/src/: shell.rs
crates/omnipanel-gateway/: Cargo.toml
crates/omnipanel-gateway/src/: lib.rs  router.rs  server.rs
crates/omnipanel-mcp/: Cargo.toml
crates/omnipanel-mcp/src/: builtin.rs  client.rs  lib.rs  manager.rs  omni_module.rs  process.rs  store.rs  types.rs
crates/omnipanel-mcp/src/registry/: external.rs  mod.rs  native.rs
crates/omnipanel-renderer/: Cargo.toml
crates/omnipanel-renderer/src/: glyph_cache.rs  lib.rs  terminal_pass.rs  text_renderer.rs
crates/omnipanel-ssh/: Cargo.toml
crates/omnipanel-ssh/src/: connection_config.rs  gpu.rs  lib.rs  openssh_config.rs  process.rs  stats.rs
crates/omnipanel-store/: Cargo.toml
crates/omnipanel-store/src/: ai_trace.rs  connection.rs  database.rs  file_index.rs  file_index_storage.rs  http.rs  knowledge.rs  lib.rs  mcp_tool.rs  paths.rs  schema_cache.rs  schema_filters.rs  storage.rs  task.rs  workflow.rs
crates/omnipanel-ui/: Cargo.toml
crates/omnipanel-ui/src/: app.rs  icons.rs  sidebar.rs  statusbar.rs  tabs.rs  theme.rs  topbar.rs
crates/omnipanel-ui/src/panels/: mod.rs  terminal.rs
crates/omnipanel-ui/src/widgets/: mod.rs
design/: database.html  design-system.html  docker.html  index.html  knowledge.html  landing.html  omnipanel-index.html  omnipanel-index.html.artifact.json  omnipanel-landing.html  omnipanel-landing.html.artifact.json  protocol.html  server.html  settings.html  ssh.html  tasks.html  terminal.html  workflow.html
design/css/: omnipanel.css
design/js/: shared.js
docs/: common-api.md  competitive-analysis.md
docs/module-plans/: README.md  TEMPLATE.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/patches/: react-obj-view+1.1.10.patch
frontend/src/: App.tsx  Bootstrap.tsx  main.tsx
i18n/: en-US.ts  index.ts  zh-CN.ts
miniapp/: App.uvue  App.vue  main.js  manifest.json  package.json  pages.json  theme.json  uni.scss
miniapp/ChatGptDemo/: manifest.json
miniapp/common/: omnipanel.css  pageMixin.js  theme.js  uni.css
miniapp/components/: AppTabBar.vue
miniapp/custom-tab-bar/: index.js  index.wxml  index.wxss
miniapp/locale/: en-US.uts  index.uts  zh-CN.uts
miniapp/store/: index.uts
miniapp/windows/: left-window.uvue  top-window.uvue
openspec/: config.yaml
scripts/: prepare-tauri-signing-key.sh  validate-signing-key.ps1  validate-signing-key.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/shell-integration/: bash.sh  fish.fish  powershell.ps1
src-tauri/src/: agent_paths.rs  lib.rs  log_store.rs  main.rs  state.rs
src-tauri/src/agent/: mod.rs  registry.rs
src-tauri/src/background/: db_sync_jobs.rs  gpu_local.rs  knowledge_vector_jobs.rs  local_ports.rs  local_system.rs  mod.rs  ssh_pool.rs  ssh_stats.rs  tasks.toml  worker_pool.rs
src-tauri/src/commands/: acp.rs  ai.rs  ai_chat.rs  ai_models.rs  bg_task.rs  connection.rs  database.rs  db_sql_files.rs  debug.rs  docker.rs  editor.rs  file_index.rs  file_manager.rs  fileio.rs  grpc.rs  knowledge.rs  knowledge_vector.rs  log.rs  mcp.rs  mcp_tool.rs  mod.rs  navicat.rs  opencode.rs  panel.rs  pool.rs  protocol.rs  proxy.rs  skills.rs  ssh.rs  system.rs  task.rs  terminal.rs  updater.rs  workflow.rs
src-tauri/src/commands/agents/: mod.rs
src-tauri/src/commands/providers/: mod.rs  registry.rs
src-tauri/src/panel/: btpanel.rs  mod.rs  onepanel.rs
src-tauri/src/protocol/: grpc.rs  http.rs  mod.rs  modbus.rs  mqtt.rs  redis_pubsub.rs  serial.rs  sniffer.rs  ws.rs
src-tauri/src/terminal/: local.rs  mod.rs  remote.rs  session.rs
(+918 files in other folders)
