[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/omnipanel-error",
    "crates/omnipanel-store",
    "crates/omnipanel-exec",
    "crates/omnipanel-ssh",
    "crates/omnipanel-db",
    "crates/omnipanel-docker",
    "crates/omnipanel-core",
    "crates/omnipanel-ai",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
# SQLite 统一由 rusqlite 承担（本地库 + 用户 SQLite 连接）；sqlx 仅负责远程网络数据库
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "mysql", "postgres"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait（执行引擎 Executor 扩展点）
async-trait = "0.1"

# IPC type generation
specta = { version = "=2.0.0-rc.25", features = ["derive"] }

# Protocol Lab
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies"], default-features = false }
serialport = "4"
rumqttc = "0.24"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
hex = "0.4"
url = "2"
base64 = "0.22"

# Terminal
portable-pty = "0.8"

# SSH（用 ring 后端，避免 aws-lc-rs 在 Windows 需要 NASM 构建链）
russh = { version = "0.54", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2"

# Docker（bollard 本地 Engine 客户端；default-features=false 避免引入 TLS/OpenSSL 构建链，本地 socket/命名管道连接不需要 TLS）
bollard = { version = "0.21", default-features = false }
futures = "0.3"
