[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/omnipanel-error",
    "crates/omnipanel-store",
    "crates/omnipanel-exec",
    "crates/omnipanel-ssh",
    "crates/omnipanel-db",
    "crates/omnipanel-docker",
    "crates/omnipanel-core",
    "crates/omnipanel-ai",
    "crates/omnipanel-mcp",
    "crates/omnipanel-gateway",
]

[workspace.package]
version = "0.0.5"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "mysql", "postgres", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait（执行引擎 Executor 扩展点）
async-trait = "0.1"

# IPC type generation
specta = { version = "=2.0.0-rc.25", features = ["derive"] }

# Protocol Lab
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serialport = "4"
rumqttc = "0.24"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
hex = "0.4"
url = "2"
base64 = "0.22"
urlencoding = "2"

# Terminal
portable-pty = "0.8"
sysinfo = "0.33"

# SSH（用 ring 后端，避免 aws-lc-rs 在 Windows 需要 NASM 构建链）
russh = { version = "0.54", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2"

# Docker（bollard）：
# - default-features=false：避免引入 TLS/OpenSSL 构建链。
# - 必须显式开启 "pipe"：Windows 命名管道（\\.\pipe\docker_engine）和 Unix socket（/var/run/docker.sock）支持都在该 feature 下，否则
#   connect_with_defaults() 在 Windows 上会落到 UnsupportedURISchemeError，导致本地 Docker Desktop 始终探测为 offline。
# - "http"：远程 Engine API（TCP/HTTP，不含 TLS），用于后续 RemoteEngine 来源。
bollard = { version = "0.21", default-features = false, features = ["pipe", "http", "ssl"] }
futures = "0.3"

[profile.dev]
# 本 crate 仍保持最快编译
opt-level = 0
debug = 1                    # 比默认 debug=2 少生成调试信息
incremental = true

# 依赖 crate 略优化：编译稍慢，但链接和整体 dev 体验往往更快
[profile.dev.package."*"]
opt-level = 1