[package]
name = "omnipanel-app"
version.workspace = true
edition.workspace = true

[lib]
name = "omnipanel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
portable-pty = "0.8"
tauri-plugin-updater = "2"
omnipanel-core = { path = "../crates/omnipanel-core" }
omnipanel-ai = { path = "../crates/omnipanel-ai" }
omnipanel-renderer = { path = "../crates/omnipanel-renderer" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures = "0.3"

# Protocol Lab
reqwest.workspace = true
serialport.workspace = true
rumqttc.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
hex.workspace = true
url.workspace = true
