[package]
name = "omnipanel-app"
version.workspace = true
edition.workspace = true

[lib]
name = "omnipanel_lib"
crate-type = ["lib"]

[features]
default = []
# 仅用于排查打包问题；正式发布勿启用（macOS 使用私有 API，无法上架 App Store）。
debug-inspector = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

tauri-plugin-updater = "2"
omnipanel-core = { path = "../crates/omnipanel-core" }
omnipanel-ai = { path = "../crates/omnipanel-ai" }
omnipanel-error = { path = "../crates/omnipanel-error" }
omnipanel-store = { path = "../crates/omnipanel-store" }
omnipanel-exec = { path = "../crates/omnipanel-exec" }
omnipanel-ssh = { path = "../crates/omnipanel-ssh" }
omnipanel-db = { path = "../crates/omnipanel-db" }
omnipanel-docker = { path = "../crates/omnipanel-docker" }
omnipanel-mcp = { path = "../crates/omnipanel-mcp" }
omnipanel-gateway = { path = "../crates/omnipanel-gateway" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sqlx.workspace = true
redis.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
async-trait = "0.1"

# Protocol Lab
reqwest.workspace = true
rustls.workspace = true
serialport.workspace = true
rumqttc.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Terminal
hex.workspace = true
sysinfo.workspace = true
url.workspace = true
base64.workspace = true
urlencoding.workspace = true
fontdb = "0.23"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta.workspace = true
specta-typescript = "=0.0.12"
toml = "0.8"
md5 = "0.7"
pdf-extract = "0.7"
suppaftp = { version = "6", default-features = false, features = ["rustls"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
