[package]
name = "omnipanel-ai"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true

# Async stream utilities
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
