[package]
name = "omnipanel-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alacritty_terminal.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
