[package]
name = "omnipanel-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
portable-pty.workspace = true
