[package]
name = "omnipanel-docker"
version.workspace = true
edition.workspace = true

[dependencies]
omnipanel-error = { path = "../omnipanel-error" }
omnipanel-ssh = { path = "../omnipanel-ssh" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
specta = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
