[package]
name = "omnipanel-docker"
version.workspace = true
edition.workspace = true

[dependencies]
omnipanel-error = { path = "../omnipanel-error" }
omnipanel-ssh = { path = "../omnipanel-ssh" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
specta = { workspace = true }
bollard = { workspace = true }
bytes = "1"
futures = { workspace = true }
tempfile = "3"
async-stream = "0.3"
walkdir = "2"
tar = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
md5 = "0.7"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
