[package]
name = "omnipanel-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
omnipanel-error = { path = "../omnipanel-error" }
omnipanel-store = { path = "../omnipanel-store" }
omnipanel-ai = { path = "../omnipanel-ai" }
async-trait = "0.1"
specta.workspace = true
rmcp = { version = "1.7.0", features = [
    "server",
    "client",
    "macros",
    "schemars",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
] }
axum = "0.8"
http = "1"
