[package]
name = "omnipanel-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
specta.workspace = true
tracing.workspace = true
omnipanel-error = { path = "../omnipanel-error" }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
