[package]
name = "omnipanel-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
#omnipanel-core = { path = "../omnipanel-core" }
#omnipanel-renderer = { path = "../omnipanel-renderer" }
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
anyhow.workspace = true
